--- a/index.html
+++ b/index.html
@@ -22,3 +22,6 @@ body{
         <li><a href="#">سلام </a></li>
         <li>خوبی</li>
     </ol>
+        <link rel="stylesheet"
+            href="https://raw.githubusercontent.com/rezanz1996/rezanz1996/refs/heads/main/style.css">
+            
