--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سایت من</title>
 </head>
-body{
-    Background-color:blue; }
+    <link rel="stylesheet"
+            href="https://raw.githubusercontent.com/rezanz1996/rezanz1996/refs/heads/main/style.css">
+            
+<body>
     <h1>سلام دنیا!</h1>
     <p>این اولین سایت من هست.</p>
     <p>و خیلی خوشحالم که دارم یاد میگیرم</p>
